Fixed header overlapping issue and used variables for colors

--- a/17.ProductLandingPage/styles.css
+++ b/17.ProductLandingPage/styles.css
@@ -5,8 +5,16 @@
   /* border: 1px solid; */
 }
 
+:root {
+  /* color variables */
+  --light-gray: #eee;
+  --dark-gray: #dfdfdf;
+  --button-background-color: #ffe134;
+  --button-background-color-hover: #ffae42;
+}
+
 body {
-  background-color: #eee;
+  background-color: var(--light-gray);
   font-family: "Lato", sans-serif;
   font-size: 15px;
 }
@@ -21,7 +29,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  z-index: 2;
+  background-color: var(--light-gray);
 }
 
 #image-wrapper {
@@ -60,14 +68,7 @@ li a {
 }
 
 main {
-  height: calc(100vh - 100px);
-  overflow-y: scroll;
   margin-top: 100px;
-  z-index: -1;
-}
-
-main::-webkit-scrollbar {
-  display: none;
 }
 
 main h2 {
@@ -93,12 +94,12 @@ form input[type="submit"] {
   font-size: 1em;
   text-transform: uppercase;
   border-radius: 2px;
-  background-color: #ffe134;
+  background-color: var(--button-background-color);
   border: none;
 }
 
 form input[type="submit"]:hover {
-  background-color: #ffae42;
+  background-color: var(--button-background-color-hover);
   cursor: pointer;
 }
 
@@ -147,7 +148,7 @@ form input[type="submit"]:hover {
 }
 
 .tier h1 {
-  background-color: #dfdfdf;
+  background-color: var(--dark-gray);
   text-transform: uppercase;
   font-size: medium;
   padding: 0.8em;
@@ -177,12 +178,12 @@ button {
   font-size: 1em;
   text-transform: uppercase;
   border-radius: 2px;
-  background-color: #ffe134;
+  background-color: var(--button-background-color);
   border: none;
 }
 
 button:hover {
-  background-color: #ffae42;
+  background-color: var(--button-background-color-hover);
   cursor: pointer;
 }
 
@@ -190,7 +191,7 @@ footer {
   width: 80%;
   height: 80px;
   margin: 1em auto;
-  background-color: #dfdfdf;
+  background-color: var(--dark-gray);
   text-align: right;
   padding: 1em;
 }
@@ -209,6 +210,10 @@ footer p {
 }
 
 @media only screen and (max-width: 610px) {
+  body {
+    font-size: 12px;
+  }
+
   #nav-bar ul {
     flex-direction: column;
   }
@@ -232,11 +237,16 @@ footer p {
 }
 
 @media only screen and (max-width: 500px) {
+  body {
+    font-size: 10px;
+  }
+
   header {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    padding-top: 10px;
   }
+
   #video {
     width: 300px;
     height: 160px;
